# escapade

./: Cargo.toml  LICENSE  README.md
src/: encode.rs  entities.rs  lib.rs
tests/: strings.rs  writer.rs
