[package]
name = "escapade"
version = "0.0.1"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
license = "MIT"
description = "`escapade` provides String concatenation and writing, but automatically escapes any HTML in the data in the process. This prevents accidental unescaped writes to the output."